samples/_failures_safe/1760884855_9edaff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_50b66c33.c: In function ‘main’:
./samples/SAFE/__tmp_50b66c33.c:171:16: error: missing terminating " character
  171 |         printf("Input:
      |                ^~~~~~~
./samples/SAFE/__tmp_50b66c33.c:171:9: error: expected expression at end of input
  171 |         printf("Input:
      |         ^~~~~~
./samples/SAFE/__tmp_50b66c33.c:171:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_50b66c33.c:171:9: error: expected declaration or statement at end of input
